# bahnapi

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/bahnapi/: __init__.py  cli.py  client.py  config.py  departures.py  exceptions.py  parsers.py  stations.py  utils.py
tests/: test_smoke.py
