[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bahnapi"
version = "0.1.0"
description = "Convenience wrapper for Deutsche Bahn Timetables API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Sebastian Speetzen" }
]
keywords = ["bahn", "deutschebahn", "train", "timetable", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "python-dotenv>=1.0.0"
]

[project.scripts]
bahnapi-test = "bahnapi.cli:main"

[project.urls]
Homepage = "https://github.com/sebastianspeetzen/bahnapi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
